<?xml version="1.0"?>
<package format="2">
  <name>simulated_lidar_scanner</name>
  <version>0.0.0</version>
  <description>The simulated_lidar_scanner package</description>

  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>interactive_markers</depend>
  <depend>pcl_ros</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>
</package>
