<?xml version="1.0"?>
<package format="2">
  <name>simulated_lidar_scanner</name>
  <version>0.1.0</version>
  <description>The simulated_lidar_scanner package</description>

  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>interactive_markers</depend>
  <depend>pcl_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <test_depend>roslaunch</test_depend>
</package>
